[tool.poetry]
name = "pydicom-viewer"
version = "0.1.0"
description = ""
authors = ["R. Bosschaert"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydicom = "^3.0.1"
matplotlib = "^3.10.0"
numpy = "^2.2.1"
pydantic = "^2.10.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
